<resources>
    <string name="app_name">BluePicksieSDKExample</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="connect">Connect</string>
    <string name="previous">Previous</string>
    <string name="test1">Test 1</string>
    <string name="test2">Test 2</string>
    <string name="test3">Test 3</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>